--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header">
-        <div class="sycle"><img class="header__Avatar" src="https://downloader.disk.yandex.ru/preview/22a6e91d0f6c3a13e355bcd0af1e023e26983efe2b88a18811d967cb0956ae03/63f4e2e7/p4kn5pTK0H0vxmzms1OQcybkILqXqxEeJazpm5ktmL61WPBqVJRPr8lLtcdbQS_VCzI47PCMBoex3MVuTkG7Ow%3D%3D?uid=0&filename=foto2.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=0&tknv=v2&size=2048x2048" alt="my foto"></div>
+        <div class="sycle"><img class="header__Avatar" src="https://github.com/RicoRivera/RicoRivera.github.io/blob/057d6f31e5977085116f9aea1278e62e9daba320/foto2.jpg?raw=true" alt="my foto"></div>
             <div class="header__title">
                 <h1>Титенок Владислав</h1>
                 <h3>Junior Frontend Developer</h3>
