--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header">
-        <div class="sycle"><img class="header__Avatar" src="https://github.com/RicoRivera/RicoRivera.github.io/blob/057d6f31e5977085116f9aea1278e62e9daba320/foto2.jpg?raw=true" alt="my foto"></div>
+        <div class="sycle"><img class="header__Avatar" src="https://github.com/RicoRivera/RicoRivera.github.io/blob/main/foto2.jpg?raw=true" alt="my foto"></div>
             <div class="header__title">
                 <h1>Титенок Владислав</h1>
                 <h3>Junior Frontend Developer</h3>
